ip address lookup

--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
   <script>
     $( document ).ready(function() {
-      // Handler for .ready() called.
-      $(".button-collapse").sideNav();
+      $('.button-collapse').sideNav({
+          closeOnClick: true
+      });
     });
   </script>
-<script type="text/javascript" src="inline.df70f131150340b08078.bundle.js"></script><script type="text/javascript" src="polyfills.d90888e283bda7f009a0.bundle.js"></script><script type="text/javascript" src="vendor.204d9c2870444c7be86f.bundle.js"></script><script type="text/javascript" src="main.259c527db9156fb751ec.bundle.js"></script></body>
+<script type="text/javascript" src="inline.dc7903adaa810c480176.bundle.js"></script><script type="text/javascript" src="polyfills.d90888e283bda7f009a0.bundle.js"></script><script type="text/javascript" src="vendor.204d9c2870444c7be86f.bundle.js"></script><script type="text/javascript" src="main.88c563a2ec9666ee76e8.bundle.js"></script></body>
 </html>
 
 
